--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ dependencyResolutionManagement {
             credentials { username authToken }
         }
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "rocketflow"
