--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,12 @@ android {
 }
 
 dependencies {
+    
+    // Core library
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test:core:1.2.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(path: ':rocketFlowSdk')
     //implementation 'com.github.tech-infraadmin:rocketflow:2.0.rc'
     testImplementation 'junit:junit:4.13.2'
@@ -64,4 +65,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:2.21"
     kapt "com.google.dagger:dagger-compiler:2.21"
     kapt "com.google.dagger:dagger-android-processor:2.21"
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.10"
 }
