--- a/rocketFlowSdk/build.gradle
+++ b/rocketFlowSdk/build.gradle
@@ -90,8 +90,8 @@ dependencies {
     // (Java only)
     implementation "androidx.work:work-runtime:$work_version"
 
-    implementation "androidx.room:room-runtime:2.4.3"
-    annotationProcessor "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-runtime:2.2.0"
+    annotationProcessor "androidx.room:room-compiler:2.2.0"
 
     // view model
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -133,6 +133,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.9.1"
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
 
 
 }
