--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.github.tech-infraadmin:rocketflow:v2.0.rc1'
+    implementation 'com.github.tech-infraadmin:rocketflow:2.0.1'
 
     //Dagger
     implementation "com.google.dagger:dagger:2.21"
