--- a/rocketFlowSdk/build.gradle
+++ b/rocketFlowSdk/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     //signaturePad
     api 'com.github.gcacace:signature-pad:1.3.1'
 
-    implementation 'com.iceteck.silicompressorr:silicompressor:2.1'
+    //implementation 'com.iceteck.silicompressorr:silicompressor:2.1'
 
     implementation 'io.apisense:rhino-android:1.0'
 
@@ -138,3 +138,4 @@ dependencies {
 
 
 }
+
