--- a/rocketFlowSdk/build.gradle
+++ b/rocketFlowSdk/build.gradle
@@ -118,6 +118,11 @@ dependencies {
 
     implementation 'com.google.android:flexbox:2.0.1'
 
+    implementation "androidmads.library.qrgenearator:QRGenearator:1.0.4"
+    implementation "com.google.zxing:core:3.3.2"
+    implementation "com.google.android.gms:play-services-vision:20.1.2"
+    implementation "com.github.siyamed:android-shape-imageview:0.9.3"
+
 
 }
 
