--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,10 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven {
+            url 'https://www.jitpack.io'
+            credentials { username authToken }
+        }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +14,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://www.jitpack.io'
+            credentials { username authToken }
+        }
         jcenter()
         maven { url 'https://jitpack.io' }
     }
