--- a/rocketFlowSdk/src/main/AndroidManifest.xml
+++ b/rocketFlowSdk/src/main/AndroidManifest.xml
@@ -222,9 +222,10 @@
         <activity
             android:name=".ui.main.MainSDKActivity"
             android:exported="true"
-            android:theme="@style/AppTheme"
+            android:label="Dashboard"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustNothing" />
+
         <activity
             android:name=".ui.facility.ServicesSDKActivity"
             android:screenOrientation="portrait" />
