--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:targetApi="31">
+
         <activity
+            android:theme="@style/AppTheme"
+            android:label="Dashboard"
             android:name=".DemoMainActivity"
             android:exported="true">
             <intent-filter>
