--- a/rocketFlowSdk/src/main/AndroidManifest.xml
+++ b/rocketFlowSdk/src/main/AndroidManifest.xml
@@ -98,6 +98,18 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustNothing" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyATO_5mNZJ8h6V64L6eHeZfiVjk63803ec" />
+
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="rzp_test_pKxFUGydHsDaDv" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="c6d6f2e2390c84c87b36ec5627ef800f21fc4b16" />
+
         <activity
             android:name=".ui.userlisting.UserListNewActivity"
             android:exported="false"
